Minor fixes
Add custom scrollbar support for Firefox browsers
Increase project thumbnail size
Remove repo button for private project repos
Add 404 page to fix github page's SPA 404 issue

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -112,6 +112,10 @@ th {
 }
 
 // SCROLL BAR
+.scrollContainer {
+    scrollbar-width: thin;
+    scrollbar-color: $primaryColor rgba(0, 0, 0, 0);
+}
 .scrollContainer::-webkit-scrollbar {
     width: 2px;
     background-color: none;
